<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_registration_input_username" />

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:drawableLeft="@drawable/ic_input_username"
        android:inputType="text"
        android:nextFocusDown="@+id/register_password_input"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_registration_input_password" />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:drawableLeft="@drawable/ic_input_pass"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/register_mail_input"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_registration_input_mail" />

    <EditText
        android:id="@+id/register_mail_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:drawableLeft="@drawable/ic_input_mail"
        android:inputType="textEmailAddress"/>


    <CheckBox
        android:id="@+id/checkBoxLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/popup_registration_checkbox_login" />

</LinearLayout>